--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg fixed-top" [class.bg-dark]="isDarkMode" [class.navbar-dark]="isDarkMode" [class.bg-primary-subtle]="!isDarkMode" [class.navbar-light]="!isDarkMode" style="height: 55px;">
+<nav class="navbar navbar-expand-lg fixed-top" [class.bg-dark]="isDarkMode" [class.navbar-dark]="isDarkMode"
+    [class.bg-primary-subtle]="!isDarkMode" [class.navbar-light]="!isDarkMode" style="height: 55px;">
 
-    
     <div class="container-fluid p-0">
 
         <a class="navbar-brand" href="#">
@@ -8,15 +8,22 @@
                 class="d-inline-block align-text-top img-fluid ps-2">
         </a>
 
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav me-auto ms-3">
+        <!-- Navbar Toggler Button -->
+        <button class="navbar-toggler p-2 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navbar Collapse -->
+        <div class="collapse navbar-collapse " id="navbarNav">
+            <ul class="navbar-nav me-auto ms-3 ">
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/project-comp']" routerLinkActive="active">Home</a>
                 </li>
             </ul>
 
             <div class="d-flex align-items-center">
-                <button class="btn  ms-2 me-1 border-0" (click)="toggleDarkMode()">
+                <button class="btn ms-2 me-1 border-0" (click)="toggleDarkMode()">
                     <i [class]="isDarkMode ? 'bi bi-moon-stars-fill' : 'bi bi-moon-stars'"></i>
                 </button>
                 <p class="my-2 mb-0 mt-0">Welcome {{ userName }},</p>
