--- a/src/app/project-component/project-component.component.html
+++ b/src/app/project-component/project-component.component.html
@@ -73,9 +73,9 @@
                   <label class="form-label">Team Members</label>
                   <div class="input-group">
                     <div class="dropdown w-100">
-                      <button class="btn dropdown-toggle border border-grey w-100 text-start" type="button"
+                      <button class="btn dropdown-toggle shadow-sm  w-100 text-start" type="button"
                         id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                        Select Team Members
+                        <span>Select Team Members</span>
                       </button>
                       <ul class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton"
                         style="padding: 10px; max-height: 200px; overflow-y: auto;">
@@ -186,14 +186,13 @@
               </li>
             </ul>
           </div>
-
-
         </div>
 
 
-        <div class="table-responsive">
-          <table class="table table-striped table-bordered" [class.table-dark]="isDarkMode">
-            <thead class="thead-light">
+        <div class=" table-responsive shadow mb-1">
+          <table class="table  table-bordered " [class.table-dark]="isDarkMode"
+            style="background-color: brown !important;">
+            <thead class="table-secondary ">
               <tr class="">
                 <th>Title</th>
                 <th>Created By</th>
@@ -214,7 +213,15 @@
                 <td>{{ project.startDate | date:'dd-MM-yyyy' }}</td>
                 <td>{{ project.dueDate + " Days" }}</td>
                 <td [title]="project.teamMembers">{{ project.teamMembers.length }}</td>
-                <td>{{ project.status }}</td>
+                <td>
+                  <span [ngClass]="{
+                              'text-danger': project.status === 'High',
+                              'text-warning': project.status === 'Medium',
+                              'text-success': project.status === 'Low'
+                            }">
+                    {{ project.status }}
+                  </span>
+                </td>
                 <td title="View" class="text-center align-items-center " (click)="navigateToTaskComponent(project)"
                   style="cursor: pointer;"><i class="bi bi-eye"></i></td>
               </tr>
@@ -223,8 +230,8 @@
         </div>
 
 
-        <div class="d-flex justify-content-between align-items-center pb-1">
-          <div class="d-flex align-items-center">
+        <div class="d-flex justify-content-between align-items-center pb-1 ">
+          <div class="d-flex align-items-center d-none d-md-flex">
             <select id="itemsPerPage" class="form-select fs-6" style="min-width: 20px"
               (change)="onItemsPerPageChange($event)">
               <option value="" selected disabled></option>
@@ -234,8 +241,8 @@
               <option value="20">20</option>
             </select>
           </div>
-          <div class="d-flex align-items-center justify-content-between">
-            <span class="text-muted">Page {{ page }} of {{ totalPages() }}</span>
+          <div class="d-flex align-items-center justify-content-between ">
+            <span class="text-muted ">Page {{ page }} of {{ totalPages() }}</span>
             <span class="text-muted">({{ projects.length }} item{{ filteredProjects.length !== 1 ? 's' : ''
               }})</span>
             <div class="d-flex align-items-center">
