--- a/src/styles.css
+++ b/src/styles.css
@@ -1,56 +1,44 @@
+body {
+  background-color: rgba(228, 244, 253, 0.3);
+}
+
 body.dark-mode {
-    background-color: #121212;
-    color: #ffffff;
-  }
-  
-  body.dark-mode .card {
-    background-color: #1e1e1e;
-    color: #ffffff;
-  }
- 
-  body.dark-mode .form-control,
-  body.dark-mode .form-select {
-    background-color: #2c2c2c;
-    color: #ffffff;
-    border-color: #444444;
-  }
-  
-  body.dark-mode .btn {
-    background-color: #444444;
-    color: #ffffff;
-    border-color: #666666;
-  }
-  
-  body.dark-mode .dropdown-menu {
-    background-color: #2c2c2c;
-    color: #ffffff;
-  }
-  .dark-mode .table {
-    background-color: #1e1e1e !important;
-    color: #ffffff;
-  }
-  
-  .dark-mode .table.table-striped tbody tr:nth-of-type(odd) {
-    background-color: #2c2c2c;
-  }
-  
-  .dark-mode .table.table-striped tbody tr:nth-of-type(even) {
-    background-color: #1e1e1e !important;
-  }
-  .table-dark {
-    background-color: #1e1e1e !important;
-    color: #ffffff  !important;
-  }
-  
-  .table-dark thead th {
-    background-color: #2c2c2c !important;
-    color: #ffffff;
-  }
-  
-  .table-dark tbody tr:nth-of-type(odd) {
-    background-color: #2c2c2c !important;
-  }
-  
-  .table-dark tbody tr:nth-of-type(even) {
-    background-color: #1e1e1e !important;
-  }
+  background-color: #121212;
+  color: #ffffff;
+}
+
+body.dark-mode .card {
+  background-color: #1e1e1e;
+  color: #ffffff;
+}
+
+body.dark-mode .form-control,
+body.dark-mode .form-select {
+  background-color: #2c2c2c;
+  color: #ffffff;
+  border-color: #444444;
+}
+
+body.dark-mode .btn {
+  background-color: #444444;
+  color: #ffffff;
+  border-color: #666666;
+}
+
+body.dark-mode .dropdown-menu {
+  background-color: #2c2c2c;
+  color: #ffffff;
+}
+.dark-mode .table-dark {
+  background-color: #1e1e1e !important;
+  color: #ffffff;
+}
+
+.dark-mode .card-header {
+  background-color: #2c2c2c;
+  color: #ffffff;
+}
+.dark-mode .card-footer {
+  background-color: #2c2c2c;
+  color: #ffffff;
+}
