--- a/src/app/task-component/task-component.component.html
+++ b/src/app/task-component/task-component.component.html
@@ -1,12 +1,7 @@
 <div class="container-fluid p-0">
     <!-- Header -->
     <app-header [userName]="userName"></app-header>
-
-
-
-    <!-- Project Details -->
     <div class="container " style="margin-top: 77px;">
-
         <!-- Project Details -->
         <div class="container mt-3">
             <!-- Project Details  -->
@@ -71,7 +66,7 @@
                                 <p>{{ project.dueDate }}</p>
                             </div>
                             <div class="mb-3">
-                                <strong>Status:</strong>
+                                <strong>Priority:</strong>
                                 <p [ngClass]="{
                                               'text-danger': project.status === 'High',
                                               'text-warning': project.status === 'Medium',
@@ -107,7 +102,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- Edit Project Form -->
             <div *ngIf="isEditing" class="card mb-3 shadow">
                 <div class="card-header">
@@ -238,7 +232,6 @@
                     </form>
                 </div>
             </div>
-
             <!-- Create Task Form -->
             <div *ngIf="!isEditingTask" class="card mb-3 shadow">
                 <div class="card-header">
@@ -323,7 +316,6 @@
                     </form>
                 </div>
             </div>
-
             <!-- Edit Task Form -->
             <div *ngIf="isEditingTask" class="card mb-3 shadow">
                 <div class="card-header">
@@ -409,6 +401,7 @@
                     </form>
                 </div>
             </div>
+            <!-- searching and sorting -->
             <div class="col-md-12">
                 <div class="d-flex justify-content-between align-items-center">
                     <!-- Search Box -->
@@ -504,6 +497,7 @@
                     </div>
                 </div>
             </div>
+            <!-- pagination  -->
             <div class="col-md-12 mb-3">
                 <div class="d-flex justify-content-between align-items-center pb-1">
                     <!-- Items Per Page Dropdown -->
