--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,46 +1,92 @@
-<div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="card" style="width: 25rem;">
-        <div class="card-body">
-            <!-- Login Form -->
-            <div *ngIf="isLogin">
-                <h3 class="card-title text-center mb-4">Login</h3>
-                <form>
-                    <div class="mb-3">
-                        <label for="we" class="form-label">Name:</label>
-                        <input type="text" id="we" name="userName" class="form-control" [(ngModel)]="login.user_name"
-                            required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="pp" class="form-label">Password:</label>
-                        <input type="text" id="pp" name="userPassword" class="form-control"
-                            [(ngModel)]="login.user_password" required>
-                    </div>
-                    <div class="text-center">
-                        <button type="button" class="btn btn-primary w-75" (click)="save_login()">Login</button>
-                    </div>
-                </form>
-                <p class="text-center mt-3">Don't have an account? <a href="#" (click)="toggleForm()">Sign Up</a></p>
-            </div>
+<div class="container-fluid" style="background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(49,152,187,1) 35%, rgba(0,212,255,1) 100%);">
+    <div class="row shadow p-5 justify-content-center 100vh" style="height: 100vh;">
+        <div class="col-md-4 p-5" style="background-color: rgb(82, 71, 71);">
+            <h3 class="text-white">Welcome</h3>
+            <p style="font-style: italic; color: rgb(165, 165, 165);">
+                A task and project management system is a crucial tool for organizing and tracking work across teams and
+                individuals. It allows users to break down complex projects into smaller, manageable tasks, each with
+                its own set of
+                deadlines, priorities, and assigned resources. These systems typically include features like task
+                assignments,
+                progress tracking, collaboration tools, and communication channels. They help ensure that team members
+                are on the
+                same page, deadlines are met, and workloads are balanced. With task dependencies and project timelines,
+                teams can
+                plan and execute projects efficiently. Additionally, task management systems offer reporting and
+                analytics to
+                monitor productivity and performance. They are commonly used in both small and large organizations to
+                streamline
+                workflows, enhance accountability, and improve project outcomes. These systems can integrate with other
+                tools like
+                calendars, email, and file storage for a seamless workflow. The goal is to maximize productivity while
+                minimizing
+                risks, delays, and inefficiencies. Overall, these systems are vital for successful project execution and
+                team
+                coordination.
+            </p>
 
-            <!-- Sign Up Form -->
-            <div *ngIf="!isLogin">
-                <h3 class="card-title text-center mb-4">Sign Up</h3>
-                <form>
-                    <div class="mb-3">
-                        <label for="ee" class="form-label">Name:</label>
-                        <input type="text" id="ee" name="signUpName" class="form-control" [(ngModel)]="signup.user_name"
-                            required>
+        </div>
+        <div class="col-md-4 p-5" [style.backgroundColor]="isLogin ? 'whitesmoke' : 'lightgrey'">
+            <div class="card-body p-3">
+                <!-- Login Form -->
+                <div *ngIf="isLogin">
+                    <div class="d-flex justify-content-center mb-3">
+                        <img src="tasklogo.png" height="80px" width="80px" alt="">
                     </div>
-                    <div class="mb-3">
-                        <label for="qq" class="form-label">Password:</label>
-                        <input type="text" id="qq" name="signUpPassword" class="form-control"
-                            [(ngModel)]="signup.user_password" required>
+                    <h3 class="card-title text-center mb-4 form-label">Login</h3>
+                    <form>
+                        <div class="mb-3">
+                            <label for="we" class="form-label">User Name:</label>
+                            <input type="text" id="we" name="userName" class="form-control"
+                                placeholder="Enter your  username" [(ngModel)]="login.user_name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="pp" class="form-label">Password:</label>
+                            <input type="password" id="pp" name="userPassword" class="form-control"
+                                placeholder="Enter your password" [(ngModel)]="login.user_password" required>
+                        </div>
+                        <div class="mb-3">
+                            <input type="checkbox" id="rememberMe" [(ngModel)]="login.rememberMe"
+                                style="color: lightgray;"> Remember Me
+                        </div>
+                        <div class="text-center">
+                            <button type="button" class="btn btn-primary w-100" (click)="save_login()">Login</button>
+                        </div>
+                    </form>
+                    <p class="text-center mt-3">Don't have an account? <a href="#" (click)="toggleForm()">Sign
+                            Up</a></p>
+                </div>
+
+                <!-- Sign Up Form -->
+                <div *ngIf="!isLogin">
+                    <div class="d-flex justify-content-center mb-3">
+                        <img src="tasklogo.png" height="80px" width="80px" alt="">
                     </div>
-                    <div class="text-center">
-                        <button type="button" class="btn btn-primary w-75" (click)="save_signUp()">Sign Up</button>
-                    </div>
-                </form>
-                <p class="text-center mt-3">Already have an account? <a href="#" (click)="toggleForm()">Login</a></p>
+                    <h3 class="card-title text-center mb-4">Sign Up</h3>
+                    <form>
+                        <div class="mb-3">
+                            <label for="ee" class="form-label">User Name:</label>
+                            <input type="text" id="ee" name="signUpName" class="form-control"
+                                [(ngModel)]="signup.user_name" required placeholder="Enter your username">
+                        </div>
+                        <div class="mb-3">
+                            <label for="qq" class="form-label">Password:</label>
+                            <input type="password" id="qq" name="signUpPassword" class="form-control"
+                                [(ngModel)]="signup.user_password" required placeholder="Enter your password">
+                        </div>
+                        <div class="mb-3">
+                            <input type="checkbox" id="rememberMe" [(ngModel)]="login.rememberMe"
+                                style="color: lightgray;"> Remember Me
+                        </div>
+                        <div class="text-center">
+                            <button type="button" class="btn btn-primary w-100" (click)="save_signUp()">Sign
+                                Up</button>
+                        </div>
+                    </form>
+                    <p class="text-center mt-3">Already have an account? <a href="#" (click)="toggleForm()">Login</a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
