--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,6 +18,15 @@
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/project-comp']" routerLinkActive="active">Home</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/project-comp']" routerLinkActive="active">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/project-comp']" routerLinkActive="active">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/project-comp']" routerLinkActive="active">Contact</a>
+                </li>
             </ul>
 
             <div class="d-flex align-items-center">
