--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
-<nav class="navbar navbar-expand-lg fixed-top" [class.bg-dark]="isDarkMode" [class.navbar-dark]="isDarkMode"
-    [class.bg-primary-subtle]="!isDarkMode" [class.navbar-light]="!isDarkMode" style="height: 55px;">
+<nav class="navbar navbar-expand-lg fixed-top" [class.nav-dark]="isDarkMode" [class.nav-light]="!isDarkMode"
+    style="height: 55px;">
+
 
     <div class="container-fluid p-0">
 
