done it finishing remains

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,8 @@
 <div class="container-fluid" style="background: rgb(2,0,36);
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(49,152,187,1) 35%, rgba(0,212,255,1) 100%);">
-    <div class="row shadow p-5 justify-content-center 100vh" style="height: 100vh;">
+    <div class="row shadow  pt-2 justify-content-center " style="height: 100vh;">
+
+       
         <div class="col-md-4 p-5" style="background-color: rgb(82, 71, 71);">
             <h3 class="text-white">Welcome</h3>
             <p style="font-style: italic; color: rgb(165, 165, 165);">
@@ -88,6 +90,6 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(49,152,187,1) 35%, rg
                     </p>
                 </div>
             </div>
-        </div>
+    </div>
     </div>
 </div>
