--- a/src/app/task-component/task-component.component.css
+++ b/src/app/task-component/task-component.component.css
@@ -92,3 +92,20 @@
     background-position: 300px;
   }
 }
+
+th {
+  background-color: rgb(9, 9, 57) !important;
+  color: white;
+  font-weight: 400;
+}
+
+.createtaskbtn {
+  background: rgb(3, 1, 37);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 50%,
+    rgba(49, 152, 187, 1) 85%,
+    rgba(0, 212, 255, 1) 100%
+  ) !important;
+  border: none !important;
+}
