--- a/src/app/task-component/task-component.component.html
+++ b/src/app/task-component/task-component.component.html
@@ -203,7 +203,7 @@
                         <div class="col-md-2">
                             <div class="mb-3">
                                 <strong>Project Name :</strong>
-                                <p>{{ project.title }}</p>
+                                <p class="text-truncate">{{ project.title }}</p>
                             </div>
                             <div class="mb-3">
                                 <strong>Created By:</strong>
