comment edit , delete project btn

--- a/src/app/task-component/task-component.component.html
+++ b/src/app/task-component/task-component.component.html
@@ -19,9 +19,9 @@
                             data-bs-target="#taskModal">
                             <i class="bi bi-plus"></i> <span class="btn-shine">Create Task</span>
                         </button>
-                        <button type="button" class="btn btn-outline-warning border-0 px-2 m-1" data-bs-toggle="modal"
+                        <!-- <button type="button" class="btn btn-outline-warning border-0 px-2 m-1" data-bs-toggle="modal"
                             title="Edit" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">
-                            <i class="bi bi-pencil"></i></button>
+                            <i class="bi bi-pencil"></i></button> -->
 
                         <!-- modal edit project -->
                         <div class="modal fade " id="exampleModal" aria-hidden="true"
@@ -192,10 +192,10 @@
                             </div>
                         </div>
                         <!-- modal  end-->
-                        <button class="btn btn-outline-danger border-0  m-1 px-2 " title="Delete"
+                        <!-- <button class="btn btn-outline-danger border-0  m-1 px-2 " title="Delete"
                             (click)="confirmDelete()">
                             <i class="bi bi-trash"></i>
-                        </button>
+                        </button> -->
                     </div>
                 </div>
                 <div class="card-body p-0 pe-0 ps-3">
